added image size for menu container

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ body {
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg);
 }
 
+img {
+width: 300px;
+height: 200px;
+}
 .locations {
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg);
 }
