--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,27 @@ body {
 
 .mission {
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg);
+  height: 700px;
+  width: 1200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
 }
 
 img {
 width: 300px;
 height: 200px;
 }
+
 .locations {
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg);
+}
+
+.location {
+  background-color: black;
+  opacity: 1;
+  padding-right: 40px;
+  padding-top: 15px;
+  width: 300px;
 }
