--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,38 @@ body {
   opacity: 0.9;
 }
 
+header {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 69px;
+  border-bottom: 1px solid seashell;
+  color: seashell;
+  background-color: black;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+}
+
+.logo img {
+  height: 50px;
+  padding-left: 10px;
+}
+
+nav {
+  padding-right: 10px;
+}
+
+nav span a {
+  color: seashell;
+  padding: 10px;
+}
+
 main {
   display: flex;
   flex-direction: column;
@@ -26,7 +58,7 @@ main {
   background-color: black;
 }
 
-img {
+.tea img {
 width: 300px;
 height: 200px;
 }
