--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ header {
   align-items: center;
   position: fixed;
   z-index: 1;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 69px;
   border-bottom: 1px solid seashell;
@@ -52,25 +54,78 @@ main {
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  opacity: 0.9;
 }
 
 .mission-bar {
   background-color: black;
 }
 
+.menu {
+  width: 1000px;
+  padding-top: 60px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+}
+
+.teabar {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 20px;
+}
+
+.rowtea {
+  display: flex;
+  flex-direction: row;
+  width: 1000px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.tea {
+  padding-right: 25px;
+}
+
 .tea img {
 width: 300px;
 height: 200px;
+opacity: 0.9;
+}
+
+.locations h2 {
+  text-align: center;
+  padding: 50px 0px 15px 0px;
+  margin-bottom: 0px;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
 }
 
 .locations {
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg);
+  width: 1200px;
+  height: 600px;
+  opacity: 0.9;
 }
 
 .location {
   background-color: black;
   opacity: 1;
-  padding-right: 40px;
-  padding-top: 15px;
   width: 300px;
+  margin: 0px 20px;
+}
+
+.info {
+text-align: center;
+}
+
+.copyright {
+  padding-left: 20px;
 }
